--- a/AdManageKit/src/main/res/layout/layout_native_large.xml
+++ b/AdManageKit/src/main/res/layout/layout_native_large.xml
@@ -12,6 +12,8 @@
             android:id="@+id/native_ad_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
+            android:background="@drawable/bg_card_ads"
             android:visibility="gone">
 
             <RelativeLayout
@@ -58,7 +60,6 @@
                             android:layout_height="match_parent"
                             android:ellipsize="end"
                             android:lines="1"
-                            android:textColor="?attr/colorSecondary"
                             android:textSize="16sp" />
 
                         <TextView
@@ -143,8 +144,10 @@
             android:layout_width="match_parent"
             android:layout_height="320dip"
             android:background="@drawable/bg_card_ads"
+            android:visibility="visible"
             app:shimmer_auto_start="true"
             app:shimmer_base_color="#ccc">
+
 
             <RelativeLayout
                 android:layout_width="fill_parent"
