--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -13,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="Native Banner Small">
+        android:text="Native Banner Small Ad">
 
     </TextView>
 
@@ -33,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/nativeBannerSmall"
         android:padding="16dp"
-        android:text="Native Banner Medium">
+        android:text="Native Banner Medium Ad">
 
     </TextView>
 
@@ -52,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/nativeBannerMedium"
         android:padding="16dp"
-        android:text="Native Banner Medium">
+        android:text="Native Large Ad">
 
     </TextView>
 
