--- a/AdManageKit/src/main/res/layout/layout_shimmer_admob_banner.xml
+++ b/AdManageKit/src/main/res/layout/layout_shimmer_admob_banner.xml
@@ -4,19 +4,23 @@
     android:id="@+id/shimmer_frame_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_card_ads"
+    android:layout_gravity="bottom"
+    android:paddingBottom="3dp"
+    android:paddingTop="3dp"
     app:shimmer_auto_start="true"
     app:shimmer_base_color="#ccc">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="56dip"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvLoadingAdContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:background="@color/colorWhite">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
@@ -74,10 +78,9 @@
                 android:textStyle="bold" />
 
         </LinearLayout>
-
         <TextView
             style="@style/AdsTheme"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true" />
-    </RelativeLayout>
+            android:layout_gravity="start" />
+
+    </androidx.cardview.widget.CardView>
 </com.facebook.shimmer.ShimmerFrameLayout>
