--- a/AdManageKit/src/main/res/values/colors.xml
+++ b/AdManageKit/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="dn_card_stroke">#F1F1F1</color>
     <color name="dn_shimmer_base_color">#ccc</color>
 
+    <color name="card_color">#3F51B5</color>
+
 </resources>
