--- a/AdManageKit/src/main/res/layout/banner_ad_view.xml
+++ b/AdManageKit/src/main/res/layout/banner_ad_view.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/parent"
-    android:layout_gravity="bottom"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content">
+    android:id="@+id/parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom">
 
 
     <FrameLayout
         android:id="@+id/fl_ad_container"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
         >
 
         <include
             layout="@layout/layout_shimmer_admob_banner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
 
     </FrameLayout>
-
 
 
 </androidx.cardview.widget.CardView>
