--- a/AdManageKit/src/main/res/layout-sw600dp/layout_native_banner_small.xml
+++ b/AdManageKit/src/main/res/layout-sw600dp/layout_native_banner_small.xml
@@ -12,8 +12,8 @@
 
         <ImageView
             android:id="@+id/ad_app_icon"
-            android:layout_width="48dip"
-            android:layout_height="48dip"
+            android:layout_width="55dip"
+            android:layout_height="55dip"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -30,7 +30,6 @@
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
-
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="@+id/ad_app_icon"
             app:layout_constraintEnd_toStartOf="@+id/ad_call_to_action"
@@ -41,23 +40,26 @@
                 android:id="@+id/ad_headline"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/roboto_medium"
                 android:maxLines="2"
                 android:text="Sample Text"
-                android:textSize="13sp" />
+                android:textSize="14sp" />
 
 
             <TextView
                 android:id="@+id/ad_body"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
+                android:layout_marginHorizontal="8dp"
+
                 android:layout_marginBottom="4dp"
+
                 android:fontFamily="@font/roboto"
                 android:maxLines="2"
                 android:text="This is sample long text of native ad and this is sample long text of native ad"
-                android:textSize="11sp" />
+                android:textSize="12sp" />
 
         </LinearLayout>
 
@@ -66,13 +68,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/ads_bg_lib"
             android:gravity="center"
-            android:text="INSTALL "
+            android:text="INSTALL"
             android:textColor="@color/colorWhite"
-            android:textSize="11sp"
-
+            android:textSize="12sp"
+            android:minWidth="120dp"
             android:includeFontPadding="false"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
