--- a/AdManageKit/src/main/res/layout-sw600dp/layout_native_large.xml
+++ b/AdManageKit/src/main/res/layout-sw600dp/layout_native_large.xml
@@ -32,8 +32,8 @@
 
                     <ImageView
                         android:id="@+id/icon"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp" />
 
@@ -51,28 +51,30 @@
                         android:layout_toStartOf="@+id/ad_choices_container"
                         android:layout_toEndOf="@+id/icon"
                         android:orientation="vertical"
-                        android:paddingLeft="6dp"
                         android:layout_centerVertical="true"
-                        android:paddingRight="6dp">
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp">
 
                         <TextView
                             android:id="@+id/primary"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:ellipsize="end"
-                            android:lines="1"
                             android:fontFamily="@font/roboto_medium"
+
+                            android:lines="1"
                             android:text="Headline"
                             android:textSize="16sp" />
 
                         <TextView
                             android:id="@+id/secondary"
                             android:layout_width="match_parent"
+
                             android:layout_height="match_parent"
                             android:ellipsize="end"
+                            android:fontFamily="@font/roboto"
                             android:maxLines="2"
                             android:text="Headline 2"
-                            android:fontFamily="@font/roboto"
                             android:textSize="12sp" />
                     </LinearLayout>
                 </RelativeLayout>
@@ -99,7 +101,7 @@
                         android:id="@+id/third_line"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
                         <TextView
                             android:id="@+id/tertiary"
@@ -107,9 +109,8 @@
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:maxLines="2"
-                            android:padding="2dp"
+                            android:padding="8dp"
                             android:fontFamily="@font/roboto_medium"
-
                             android:text="Advertiser Name"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -121,7 +122,7 @@
                         <Button
                             android:id="@+id/cta"
                             android:layout_width="match_parent"
-                            android:layout_height="45dp"
+                            android:layout_height="wrap_content"
                             android:layout_margin="2dp"
                             android:background="@drawable/ads_bg_lib"
                             android:gravity="center"
@@ -220,7 +221,7 @@
                             android:id="@+id/ad_choices_container_load"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true"
                             android:gravity="end"
                             android:orientation="horizontal" />
 
@@ -274,7 +275,6 @@
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="40dip"
-                        android:layout_alignParentRight="true"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="10dip"
                         android:layout_marginRight="10dip"
