Refactor: Updated dependencies and improved native ad layouts
- Updated `admanagekit` version to 1.1.6.
- Upgraded Gradle to version 8.10.2.
- Updated various dependencies, including `agp`, `firebaseBom`, `kotlin`, `lifecycleProcess`, `activity`, `constraintlayout`, `playServicesAds`, `userMessagingPlatform`.
- Changed `LinearLayout` to `FrameLayout` in `layout_native_large`, `layout_native_banner_small_preview`, and `layout_native_banner_medium_preview` layouts.
- Made some view visibility changes.
- Updated proguard rules.
- Removed `AD_SERVICES_CONFIG` property.

--- a/AdManageKit/src/main/res/layout-sw600dp/layout_native_large.xml
+++ b/AdManageKit/src/main/res/layout-sw600dp/layout_native_large.xml
@@ -14,7 +14,7 @@
             android:layout_height="match_parent"
 
             android:background="@drawable/bg_card_ads"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <RelativeLayout
                 android:id="@+id/background"
@@ -152,7 +152,7 @@
             android:layout_width="match_parent"
             android:layout_height="320dip"
             android:background="@drawable/bg_card_ads"
-            android:visibility="gone"
+            android:visibility="visible"
             app:shimmer_auto_start="true"
             app:shimmer_base_color="#ccc">
 
