--- a/AdManageKit/src/main/res/layout/layout_native_banner_small_preview.xml
+++ b/AdManageKit/src/main/res/layout/layout_native_banner_small_preview.xml
@@ -2,7 +2,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -105,7 +105,7 @@
             </RelativeLayout>
         </com.facebook.shimmer.ShimmerFrameLayout>
 
-    </LinearLayout>
+    </FrameLayout>
 </merge>
 
 
