--- a/AdManageKit/src/main/res/layout/layout_native_banner_medium.xml
+++ b/AdManageKit/src/main/res/layout/layout_native_banner_medium.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/native_ad_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -10,6 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,6 +20,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:orientation="horizontal"
                 android:layout_gravity="center"
                 android:gravity="center"
@@ -50,8 +53,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
-
                         android:orientation="horizontal">
 
                         <TextView
@@ -81,7 +82,6 @@
             </LinearLayout>
 
 
-
             <Button
                 android:id="@+id/ad_call_to_action"
                 android:layout_width="match_parent"
@@ -95,6 +95,16 @@
                 android:textSize="12sp"
                 android:textStyle="bold" />
         </LinearLayout>
+
+
+        <com.google.android.gms.ads.nativead.AdChoicesView
+            android:id="@+id/ad_choices_view"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
+            android:gravity="end"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView style="@style/AdsTheme" />
     </RelativeLayout>
