--- a/AdManageKit/src/main/res/layout/layout_native_large.xml
+++ b/AdManageKit/src/main/res/layout/layout_native_large.xml
@@ -43,7 +43,12 @@
                         android:layout_height="20dp"
                         android:layout_alignParentEnd="true"
                         android:gravity="end"
-                        android:orientation="horizontal" />
+                        android:orientation="horizontal" >
+                        <com.google.android.gms.ads.nativead.AdChoicesView
+                            android:id="@+id/ad_choices_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
