--- a/app/src/main/res/layout/activity_interstitial.xml
+++ b/app/src/main/res/layout/activity_interstitial.xml
@@ -8,6 +8,12 @@
     tools:context=".InterstitialActivity">
 
 
+    <com.i2hammad.admanagekit.admob.NativeBannerMedium
+        android:id="@+id/nativeBannerMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </com.i2hammad.admanagekit.admob.NativeBannerMedium>
     <TextView
         android:id="@+id/statusTextView"
         android:layout_width="wrap_content"
