--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,6 @@
         <!-- Customize your dark theme here. -->
          <item name="colorPrimary">@color/my_dark_primary</item>
     </style>
+    <style name="Theme.AdManageKit" parent="Base.Theme.AdManageKit" />
+
 </resources>
