--- a/AdManageKit/src/main/res/values/attrs.xml
+++ b/AdManageKit/src/main/res/values/attrs.xml
@@ -22,14 +22,15 @@
             <enum name="social_feed" value="13" />
             <enum name="gradient_card" value="14" />
             <enum name="pill_banner" value="15" />
-            <enum name="spotlight" value="16" />
+            <enum name="medium_horizontal" value="16" />
+            <enum name="spotlight" value="17" />
             <!-- Video Templates -->
-            <enum name="video_small" value="17" />
-            <enum name="video_medium" value="18" />
-            <enum name="video_large" value="19" />
-            <enum name="video_square" value="20" />
-            <enum name="video_vertical" value="21" />
-            <enum name="video_fullscreen" value="22" />
+            <enum name="video_small" value="18" />
+            <enum name="video_medium" value="19" />
+            <enum name="video_large" value="20" />
+            <enum name="video_square" value="21" />
+            <enum name="video_vertical" value="22" />
+            <enum name="video_fullscreen" value="23" />
         </attr>
 
         <!-- AdChoices icon placement position -->
